[tool.poetry]
name = "mtkcpu"
version = "0.1.0"
description = "RiscV ISA implementation in Python"
authors = [
    "Mateusz Biegański <bieganski.m@wp.pl>",
    "Piotr Styczyński <piotrsty1@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ppci = "^0.5.8"
nmigen = "^0.2"
numpy = "^1.20.3"
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
pyelftools = "^0.27"
bitstring = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flakehell = "^0.7.1"
isort = "^5.7.0"
pytest = "^6.2.1"
pytest-xdist = "^2.2.0"
rope = "^0.18.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 79

[tool.flakehell]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]
pyflakes = ["+*", "-E203"]
pylint = ["+*", "-E203"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
