[tool.poetry]
name = "mtkcpu"
version = "0.1.2"
description = "RiscV ISA implementation in Python"
authors = [
    "Mateusz Biegański <bieganski.m@wp.pl>",
    "Piotr Styczyński <piotrsty1@gmail.com>"
]
license = "MIT"

[tool.poetry.scripts]
mtkcpu = 'mtkcpu.cli.main:run_cli'

# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "mtkcpu/tests",
]

[tool.poetry.dependencies]
python = "^3.8"
ppci = "^0.5.8"
numpy = "^1.19.2"
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
pyelftools = "^0.27"
bitstring = "^3.1.7"
typer = "^0.3.2"
termcolor = "^1.1.0"
amaranth = { git = "https://github.com/amaranth-lang/amaranth", rev = "a0750b89c6060d9f809159a012a26cff4e22e69d" }
# amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards", branch = "main" }
riscv-model = { git = "https://github.com/bieganski/riscv-python-model", branch = "master" }
MarkupSafe = "2.0.1"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flakehell = "^0.7.1"
isort = "^5.7.0"
pytest = "^6.2.1"
pytest-xdist = "^2.2.0"
rope = "^0.18.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 79

[tool.flakehell]
exclude = ["README.rst", "README.md", "submodules"]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"
extended_default_ignore=[]

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]
pyflakes = ["+*", "-E203"]
pylint = ["+*", "-E203"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
